Adjust profile pic sizize to avoid overlap

--- a/css/main.scss
+++ b/css/main.scss
@@ -32,7 +32,7 @@ $on-laptop:        800px;
 
 
 // Picture profile
-$profilepic-size:  230px;
+$profilepic-size:  210px;
 
 // Group logo
 $grouplogo-size:  350px;
